src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-29.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units meters\")"
---
items:
  - loc: "#units meters"
    locs:
      directive: "#units"
    options:
      - loc: meters
        option: DistanceUnit
        unit: Meters
    type: UnitsDirective
