src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-291.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typeab=N\")"
---
items:
  - loc: "#units typeab=N"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: false
        loc: typeab=N
        locs:
          is_corrected: N
          option: typeab
        option: BacksightAzimuthType
        tolerance:
          unit: Degrees
          value: 5
    type: UnitsDirective
