src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-293.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typeab=C\")"
---
items:
  - loc: "#units typeab=C"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: true
        loc: typeab=C
        locs:
          is_corrected: C
          option: typeab
        option: BacksightAzimuthType
        tolerance:
          unit: Degrees
          value: 5
    type: UnitsDirective
