src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-298.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typeab=c,5.4\")"
---
items:
  - loc: "#units typeab=c,5.4"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: true
        loc: "typeab=c,5.4"
        locs:
          is_corrected: c
          option: typeab
          tolerance: "5.4"
        option: BacksightAzimuthType
        tolerance:
          unit: Degrees
          value: 5.4
    type: UnitsDirective
