src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-3.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=adv\")"
---
items:
  - loc: "#units order=adv"
    locs:
      directive: "#units"
    options:
      - loc: order=adv
        locs:
          option: order
          order: adv
        option: CompassAndTapeOrder
        order:
          - Azimuth
          - Distance
          - Inclination
    type: UnitsDirective
